<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--TÍTULO-->
    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/calculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--BOTÃO DE CÁLCULO-->
    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="36dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <!--RESULTADO-->
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/app_result"
        android:textSize="50px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_options" />

    <!--OPÇÕES-->
    <RadioGroup
        android:id="@+id/calc_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checkedButton="@id/options_sum"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insert_number2">

        <!--SOMA-->
        <RadioButton
            android:id="@+id/options_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_sum" />

        <!--SUBTRAÇÃO-->
        <RadioButton
            android:id="@+id/options_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_subtract" />

        <!--MULTIPLICAÇÃO-->
        <RadioButton
            android:id="@+id/options_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_multiply" />

        <!--DIVISÃO-->
        <RadioButton
            android:id="@+id/options_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_divide" />

    </RadioGroup>

    <!--INSERÇÃO DO PRIMEIRO NÚMERO-->
    <EditText
        android:id="@+id/insert_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/calculate_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="Primeiro número..." />

    <!--INSERÇÃO DO SEGUNDO NÚMERO-->
    <EditText
        android:id="@+id/insert_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/calculate_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insert_number"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="Segundo número..." />


</androidx.constraintlayout.widget.ConstraintLayout>

